--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,1 @@
-hi my name is chaos
-i want to learn git, i am currently learning data science and machine learning on udemy
-my goal is to make trading robots
-and build a investment management company
-thank you
+welcome to the chaosengines trading algorithm series. 
